testdata/invalid/internal/domain/user/bad_import.go
package user

import _ "github.com/kimtaeyun/testproject-invalid/internal/app"

func Bad() {}
